--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "reduxjs-toolkit-persist": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
